<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.madam.ui.viewModels.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ChangePasswordActivity">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/back"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:text="@={model.oldPassword}"
            android:inputType="textPassword"
            style="@style/H2RobotoFont"
            android:backgroundTint="@color/primary"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newPassword"
            />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:text="@={model.newPassword}"
            android:inputType="textPassword"
            style="@style/H2RobotoFont"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/oldPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/confirmNewPassword"
            />

        <EditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/retype_new_password"
            android:text="@={model.retypeNewPassword}"
            android:inputType="textPassword"
            style="@style/H2RobotoFont"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/newPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/changePassword"
            />

        <Button
            android:id="@+id/changePassword"
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> model.changePassword()}"
            app:layout_constraintTop_toBottomOf="@+id/confirmNewPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>