<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.madam.ui.viewModels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logOut"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> model.logOut()}"
            android:src="@drawable/logout"
            android:text="@string/logout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/all_circle_white"
            android:padding="3dp"
            app:layout_constraintBottom_toTopOf="@+id/loginName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/personIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_50"
            android:layout_marginStart="80dp"
            app:layout_constraintBottom_toTopOf="@+id/emailIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/loginName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/loginName"
            style="@style/H2RobotoFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/primary"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/emailAddress"
            app:layout_constraintLeft_toRightOf="@+id/personIcon"
            app:layout_constraintTop_toBottomOf="@id/profileImage" />

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_outline_50"
            android:layout_marginStart="80dp"
            app:layout_constraintBottom_toTopOf="@+id/changePassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/personIcon" />

        <TextView
            android:id="@+id/emailAddress"
            style="@style/H2RobotoFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/changePassword"
            app:layout_constraintLeft_toRightOf="@+id/emailIcon"
            app:layout_constraintTop_toBottomOf="@id/loginName" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailAddress" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>